--- a/fem1/package.json
+++ b/fem1/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "fem1",
-  "version": "1.0.0",
-  "description": "example",
-  "main": "index.js",
-  "scripts": {
-    "format": "prettier --write \"src/**/*.{js, jsx, css, json} \" ",
-    "format:check": "prettier --list-different \"src/**/*.{js, jsx, css, json} \" ",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "prettier": "^1.15.3"
-  }
+    "name": "fem1",
+    "version": "1.0.0",
+    "description": "example",
+    "main": "index.js",
+    "scripts": {
+        "format": "prettier --write \"src/**/*.{js, jsx, css, json} \" ",
+        "format:check": "prettier --list-different \"src/**/*.{js, jsx, css, json} \" ",
+        "lint": "eslint \" **/*.{js,jsx} \"",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^5.9.0",
+        "eslint-config-prettier": "^3.3.0",
+        "eslint-plugin-prettier": "^3.0.0",
+        "prettier": "^1.15.3"
+    }
 }
