--- a/fem1/.eslintrc.json
+++ b/fem1/.eslintrc.json
@@ -1,8 +1,19 @@
 {
-    "extends": ["eslint:recommended", "prettier", "prettier/react"],
+    "extends": [
+        "eslint:recommended",
+        "prettier",
+        "prettier/react",
+        "plugin:import/errors",
+        "plugin:react/recommended",
+        "plugin:jsx-a11y/recommended"
+    ],
+    "rules": {
+        "react/prop-types": 0
+    },
+    "plugins": ["react", "import", "jsx-a11y"],
     "parserOptions": {
         "ecmaVersion": 2018,
-        "soruceType": "module",
+        "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true
         }
