--- a/fem1/package.json
+++ b/fem1/package.json
@@ -6,16 +6,20 @@
     "scripts": {
         "format": "prettier --write \"src/**/*.{js, jsx, css, json} \" ",
         "format:check": "prettier --list-different \"src/**/*.{js, jsx, css, json} \" ",
-        "lint": "eslint \" **/*.{js,jsx} \"",
+        "lint": "eslint \"src/**/*.{js,jsx} \"",
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "parcel src/index.html"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "babel-eslint": "^10.0.1",
         "eslint": "^5.9.0",
         "eslint-config-prettier": "^3.3.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.2",
         "eslint-plugin-prettier": "^3.0.0",
+        "eslint-plugin-react": "^7.11.1",
         "parcel-bundler": "^1.10.3",
         "prettier": "^1.15.3"
     },
