--- a/fem1/package.json
+++ b/fem1/package.json
@@ -24,8 +24,9 @@
         "prettier": "^1.15.3"
     },
     "dependencies": {
+        "@reach/router": "^1.2.1",
         "petfinder-client": "0.0.3",
-        "react": "^16.6.3",
-        "react-dom": "^16.6.3"
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0"
     }
 }
