--- a/fem1/package.json
+++ b/fem1/package.json
@@ -13,8 +13,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.3.4",
         "@babel/preset-react": "^7.0.0",
+        "babel-core": "^6.26.3",
         "babel-eslint": "^10.0.1",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.7.0",
