--- a/fem1/package.json
+++ b/fem1/package.json
@@ -7,12 +7,14 @@
         "format": "prettier --write \"src/**/*.{js, jsx, css, json} \" ",
         "format:check": "prettier --list-different \"src/**/*.{js, jsx, css, json} \" ",
         "lint": "eslint \"src/**/*.{js,jsx} \"",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --silent",
+        "test:update": "jest --silent -u",
         "dev": "parcel src/index.html"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.3.4",
         "@babel/preset-react": "^7.0.0",
         "babel-core": "^6.26.3",
         "babel-eslint": "^10.0.1",
