--- a/fem1/package.json
+++ b/fem1/package.json
@@ -40,6 +40,8 @@
         "@reach/router": "^1.2.1",
         "petfinder-client": "0.0.3",
         "react": "^16.8.3",
-        "react-dom": "^16.8.3"
+        "react-dom": "^16.8.3",
+        "emotion": "^10.0.7",
+        "react-emotion": "^10.0.0"
     }
 }
