--- a/fem1/package.json
+++ b/fem1/package.json
@@ -42,7 +42,9 @@
         "@reach/router": "^1.2.1",
         "emotion": "^10.0.7",
         "petfinder-client": "0.0.3",
-        "react": "^16.8.3",
-        "react-dom": "^16.8.3"
+        "react": "^16.8.4",
+        "react-dom": "^16.8.4",
+        "react-loadable": "^5.5.0",
+        "styled-components": "^4.1.3"
     }
 }
