--- a/fem1/package.json
+++ b/fem1/package.json
@@ -1,45 +1,46 @@
 {
-    "name": "fem1",
-    "version": "1.0.0",
-    "description": "example",
-    "main": "index.js",
-    "scripts": {
-        "format": "prettier --write \"src/**/*.{js, jsx, css, json} \" ",
-        "format:check": "prettier --list-different \"src/**/*.{js, jsx, css, json} \" ",
-        "lint": "eslint \"src/**/*.{js,jsx} \"",
-        "test": "jest --silent",
-        "test:update": "jest --silent -u",
-        "test:watch": "jest --silent --watch",
-        "test:coverage": "jest --silent --coverage",
-        "dev": "parcel src/index.html"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/core": "^7.3.4",
-        "@babel/preset-react": "^7.0.0",
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^10.0.1",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
-        "babel/core": "^7.3.3",
-        "babel/preset-react": "^7.0.0",
-        "eslint": "^5.9.0",
-        "eslint-config-prettier": "^3.3.0",
-        "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-prettier": "^3.0.0",
-        "eslint-plugin-react": "^7.12.4",
-        "jest": "^24.1.0",
-        "parcel-bundler": "^1.11.0",
-        "prettier": "^1.16.4",
-        "react-test-renderer": "^16.8.3"
-    },
-    "dependencies": {
-        "@reach/router": "^1.2.1",
-        "petfinder-client": "0.0.3",
-        "react": "^16.8.3",
-        "react-dom": "^16.8.3"
-    }
+  "name": "fem1",
+  "version": "1.0.0",
+  "description": "example",
+  "main": "index.js",
+  "scripts": {
+    "format": "prettier --write \"src/**/*.{js, jsx, css, json} \" ",
+    "format:check": "prettier --list-different \"src/**/*.{js, jsx, css, json} \" ",
+    "lint": "eslint \"src/**/*.{js,jsx} \"",
+    "test": "jest --silent",
+    "test:update": "jest --silent -u",
+    "test:watch": "jest --silent --watch",
+    "test:coverage": "jest --silent --coverage",
+    "dev": "parcel src/index.html"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel/core": "^7.3.3",
+    "babel/preset-react": "^7.0.0",
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.1.0",
+    "parcel-bundler": "^1.11.0",
+    "prettier": "^1.16.4",
+    "react-test-renderer": "^16.8.3"
+  },
+  "dependencies": {
+    "@reach/router": "^1.2.1",
+    "petfinder-client": "0.0.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.3",
+    "react-loadable": "^5.5.0"
+  }
 }
