--- a/fem1/package.json
+++ b/fem1/package.json
@@ -45,6 +45,9 @@
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
         "react-loadable": "^5.5.0",
+        "react-redux": "^6.0.1",
+        "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0",
         "styled-components": "^4.1.3"
     }
 }
