--- a/fem1/package.json
+++ b/fem1/package.json
@@ -42,6 +42,7 @@
     "@reach/router": "^1.2.1",
     "emotion": "^10.0.7",
     "petfinder-client": "0.0.3",
+    "rea": "0.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.4",
     "react-loadable": "^5.5.0",
