--- a/gatsby-intro/package.json
+++ b/gatsby-intro/package.json
@@ -7,10 +7,13 @@
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
+    "@mdx-js/mdx": "^1.3.1",
+    "@mdx-js/react": "^1.3.1",
     "gatsby": "^2.10.4",
     "gatsby-image": "^2.2.3",
     "gatsby-plugin-emotion": "^4.1.0",
     "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-mdx": "^1.0.25",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
