--- a/gatsby-intro/package.json
+++ b/gatsby-intro/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/react": "^1.3.1",
     "gatsby": "^2.10.4",
     "gatsby-image": "^2.2.3",
+    "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.0",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-mdx": "^1.0.25",
