--- a/gatsby-intro/package.json
+++ b/gatsby-intro/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/mdx": "^1.3.1",
     "@mdx-js/react": "^1.3.1",
     "gatsby": "^2.10.4",
+    "gatsby-background-image": "^0.8.5",
     "gatsby-image": "^2.2.3",
     "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.0",
