--- a/gatsby-intro/package.json
+++ b/gatsby-intro/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-remark-images": "^3.1.18",
     "gatsby-source-filesystem": "^2.1.0",
+    "gatsby-source-instagram": "^0.5.1",
     "gatsby-transformer-remark": "^2.6.19",
     "gatsby-transformer-sharp": "^2.2.0",
     "prop-types": "^15.7.2",
